<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="str_myCircle">我的圈子</string>
    <string name="str_more">更多</string>
    <string name="str_youHavenJoinedCirclesYet">您还未加入任何圈子</string>
    <string name="str_applyToJoin">申请加入</string>
    <string name="str_hotList">热门榜单</string>
    <string name="str_all">全部</string>
    <string name="str_guessYouLike">猜你喜欢</string>
    <string name="str_inBatch">换一批</string>
    <string name="str_members">成员</string>
    <string name="str_hotCarCircle">热门车型圈</string>
    <string name="str_hotCarCircle0">热门车友圈</string>
    <string name="str_circleHotList">圈子热门榜单</string>
    <string name="str_join">加入</string>
    <string name="str_hasJoined">已加入</string>
    <string name="str_create">创建</string>
    <string name="str_circleName"><font color="#FF0000">*</font>   圈子名称</string>
    <string name="str_inputDescription"><font color="#FF0000">*</font>   填写描述</string>
    <string name="str_pleaseInputCircleName">请填写圈子名称（1-15个字）</string>
    <string name="str_inputDescriptionMorePeopleWillJoin">填写描述会有更多人加入哦~</string>
    <string name="str_beautifulCircleJoin">漂亮的圈子头像可以吸引更多人加入哦~</string>
    <string name="str_circleTag"><font color="#FF0000">*</font>   圈子标签</string>
    <string name="more">更多</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="str_circlePK">圈子PK</string>
    <string name="str_cycle">周期：</string>
    <string name="str_inPk">PK中</string>
    <string name="str_toPlayList">去打榜</string>
    <string name="str_look">查看</string>
    <string name="str_appliedForMembership">已申请加入，等待审核</string>
    <string name="str_mostOptionalTagX">最多可选%1$d个标签</string>
    <string name="str_applying">申请中</string>
    <string name="str_underReview">审核中</string>
    <string name="str_createCircle">创建圈子</string>
    <string name="search_location">搜索地点</string>
    <string name="str_askQuestions">提问</string>
    <string name="str_myQuestionAndAnswer">我的问答</string>
    <string name="str_taQuestionAndAnswer">TA的问答</string>
    <string name="str_technicianInformation">技师信息</string>
    <string name="question_title_tips">问题(5-20个字)</string>
    <string name="please_write">问题(5-20个字)</string>
    <string name="question_tips">为了便于金牌技师准确地诊断和为您提供优质解答，请详细描述您的问题、选择问题分类，并且尽量提供相关照片(200字内，选填)</string>
    <string name="pop_question_tips">提问需花费福币，如未采纳，福币将留存在系统，直至采纳解答后，福币将直接打赏给为您提供优质解答的问答红人或用户。</string>
    <string name="reset">重置</string>
    <string name="str_circleClassification"><font color="#FF0000">*</font>   圈子分类</string>
    <string name="str_pleaseSelectA">请选择</string>
    <string name="str_circleAudit"><font color="#FF0000">*</font>   入圈审核</string>
    <string name="str_circleType">圈子分类</string>
    <string name="str_cancel">取消</string>
    <string name="str_determine">确定</string>
    <string name="str_redskinsInformation">TA的问答</string>
    <string name="str_successfullyJoined">已成功加入</string>
    <string name="str_exit">退出</string>
    <string name="str_setIdentity">设置身份</string>
    <string name="str_remainingPlaces">剩余名额：</string>
    <string name="str_confirm">确认</string>
    <string name="str_hold_title">1.每位车主用户仅能选择保留1个车友会圈\n2. 车主用户确认保留后，将自动退出其他车友会圈\n3. 若车主用户为车友会圈圈主，则只能选择保留圈主对应的圈子\n4. 用户2024年07月31日23:59:59前未选择保留的圈子，系统将根据以下规则，自动选择并保留1个车友会圈：\n1) 圈主用户：保留用户为【圈主】的车友会圈\n2) 普通用户：保留最近加入的车友会圈</string>
</resources>