<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_white_top_5dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_33"
        android:paddingBottom="@dimen/dp_19"
        tools:minHeight="@dimen/dp_200">

        <com.changanford.common.ui.view.WTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_circleType"
            android:textColor="@color/color_00"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginEnd="@dimen/dp_6"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:listitem="@layout/item_circle_selecttype" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/dp_60"
            android:background="@drawable/border_0095b_29dp"
            android:gravity="center"
            android:text="@string/str_cancel"
            android:layout_marginEnd="9dp"
            android:textColor="@color/color_1700f4"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toStartOf="@id/btn_determine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_determine"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="49dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/shape_00095b_29dp"
            android:gravity="center"
            android:text="@string/str_determine"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/recyclerView"
            app:layout_constraintTop_toTopOf="@id/btn_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>