<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_FF"
        android:orientation="vertical">

        <include
            android:id="@+id/layout_title"
            layout="@layout/layout_sample_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/ns"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_question_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/dp_26"
                    android:layout_marginEnd="16dp"
                    android:text="@string/question_title_tips"
                    android:textColor="#ff333333"
                    android:textSize="15sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_question_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:hint="@string/please_write"
                    android:maxLength="20"
                    android:textColor="@color/color_16"
                    android:textColorHint="@color/color_4d16"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_question_title" />

                <View
                    android:id="@+id/v_line"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/color_1a4a"
                    app:layout_constraintTop_toBottomOf="@+id/et_question_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_question"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/dp_28"
                    android:layout_marginEnd="16dp"
                    android:text="补充说明(200字内,选填)"
                    android:textColor="#ff333333"
                    android:textSize="15sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/v_line" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_question"
                    style="@style/AppText.lineSpace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/question_tips"
                    android:maxLength="200"
                    android:textColor="@color/color_d916"
                    android:textColorHint="@color/color_4d16"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_question" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_img"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="16dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_question"
                    app:spanCount="3" />

                <View
                    android:id="@+id/v_line2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/color_1a4a"
                    app:layout_constraintTop_toBottomOf="@+id/rv_img" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lable_content"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/v_line2">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_question_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="16dp"
                        android:drawablePadding="@dimen/dp_8"
                        android:text="选择问题类型"
                        android:textColor="@color/color_16"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.donkingliang.labels.LabelsView
                        android:id="@+id/labels_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="@dimen/dp_8"
                        android:layout_marginEnd="16dp"
                        app:labelBackground="@drawable/shape_question_type"
                        app:labelGravity="center"
                        app:labelTextColor="@drawable/shape_question_type_text_color"
                        app:labelTextHeight="wrap_content"
                        app:labelTextPaddingBottom="5dp"
                        app:labelTextPaddingLeft="15dp"
                        app:labelTextPaddingRight="15dp"
                        app:labelTextPaddingTop="5dp"
                        app:labelTextSize="12sp"
                        app:labelTextWidth="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question_type"
                        app:lineMargin="@dimen/dp_10"
                        app:selectType="SINGLE"
                        app:wordMargin="@dimen/dp_9" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_ford_reward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:drawablePadding="@dimen/dp_8"
                        android:text="福币打赏"
                        android:textColor="@color/color_16"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/labels_type" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_question"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:padding="4dp"
                        android:src="@drawable/icon_question_q"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_ford_reward"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_ford_reward" />


                    <com.donkingliang.labels.LabelsView
                        android:id="@+id/labels_reward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="@dimen/dp_8"
                        android:layout_marginEnd="16dp"
                        app:labelBackground="@drawable/shape_question_type"
                        app:labelGravity="center"
                        app:labelTextColor="@drawable/shape_question_type_text_color"
                        app:labelTextHeight="wrap_content"
                        app:labelTextPaddingBottom="5dp"
                        app:labelTextPaddingLeft="15dp"
                        app:labelTextPaddingRight="15dp"
                        app:labelTextPaddingTop="5dp"
                        app:labelTextSize="12sp"
                        app:labelTextWidth="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_ford_reward"
                        app:lineMargin="@dimen/dp_10"
                        app:selectType="SINGLE"
                        app:wordMargin="@dimen/dp_8" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>